backend-frontend/base/be-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: sofe
spec:
  ports:
    - port: 8080
  selector:
    app: sofe
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: sofe
spec:
  selector:
    matchLabels:
      app: sofe
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sofe
        tier: backend
    spec:
      containers:
      - image: josuecodjo/backend_app
        imagePullPolicy: Always
        name: backend
        # command: ["/bin/bash"]
        # args: ["-c","while sleep 0.01; do echo 'OK'; done"]
        #args: ["-c","/opt/app/start_app.sh"]
        ports:
        - containerPort: 30100
          name: backend
        volumeMounts:
        - name: backend-persistent-storage
          mountPath: /tmp
      volumes:
      - name: backend-persistent-storage
        persistentVolumeClaim:
          claimName: backend-pv-claim
