backend-frontend/base/fe-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: sofe
spec:
  ports:
    - port: 3000
  selector:
    app: sofe
    tier: frontend
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: sofe
spec:
  selector:
    matchLabels:
      app: sofe
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sofe
        tier: frontend
    spec:
      containers:
      - image: postgres:13
        name: postgresql
        ports:
        - containerPort: 3000
          name: frontend
        volumeMounts:
        - name: frontend-persistent-storage
          mountPath: /var/lib/frontend/data
      volumes:
      - name: frontend-persistent-storage
        persistentVolumeClaim:
          claimName: frontend-pv-claim
