backend-frontend/base/be-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend
  labels:
    app: sofe
spec:
  entryPoints:
    - webbe
  routes:
    - match: Host(`sofe.joshlab.home`)
      kind: Rule
      services:
        - name: backend
          port: 8080
  tls:
    certResolver: letsencrypt
