backend-frontend/base/fe-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  labels:
    app: sofe
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sofe.joshlab.home`)
      kind: Rule
      services:
        - name: frontend
          port: 3000
  tls:
    certResolver: letsencrypt
